2007-07-16  Akim Demaille  <demaille@gostai.com>

	Nuke keywords that are not used
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l: Remove
	keyword that are scanned at all, or not used anywhere in the
	grammar.
	Some (e.g., "stop" and "switch") actually used to be specific
	terminals, but they are now part of a wider family (OPERATOR_ID,
	TOK_NUMBER).

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Remove dead keyword
	* configure.ac: Set version.
	* src/parser/bison/ugrammar.y (TOK_EXPRBLOCK): Remove, useless.
	* src/uconnection.cc: Space changes.

2007-07-13  Akim Demaille  <demaille@gostai.com>

		merge -r 1266:1300 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-07-13  Akim Demaille  <demaille@gostai.com>
	Fix ''d
	* src/parser/bison/ugrammar.y: Actually, it's 'dd.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Remove incorrect nonterminal aliases
	* src/urbi/trunk/kernel1/src/parser/bison/ugrammar.y: Remove
	explicit strings that were made to be aliases for terminals,
	but it is not accepted but Bison like this, it believes they
	are fresh tokens.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Update the test suite external.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	merge -r 1259:1266 https://svn.gostai.com/svn/kernel1/branches/1.0
	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Warn on use of operator ^. Add operator **.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Add a mehod to emit warnings.
	* src/parser/bison/utoken.l: Emit warnings on ^.
        Scan ** as exponent operator.
	* src/uconnection.cc,
	* src/uexpression.cc: Report warnings through the connection.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Fix previous patch: use automerge.
	* .automerge: Update.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Fix logic operators precedence.
	* src/parser/bison/ugrammar.y: Here.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	merge -r 1186:1213 https://svn.gostai.com/svn/kernel1/branches/1.0
